Taal veranderd van Engels naar Nederlands

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
   <main class="main">
     <section class="intro">
       <h1 class="first-heading"><span class="u-bold"></span> <span class="u-blue">Diversion</span></span></h1>
-      <p class="text"><span class="u-bold"> <i>a Gaming Company giving you the best gaming experience possible.</i>
+      <p class="text"><span class="u-bold"> <i>Door Gamers, Voor Gamers</i>
         <span class="text--second">based in The Netherlands.</span>
       </p>
     </section>
 
     <section class="work">
       <div class="top">
-        <h2 class="second-heading">Our Games:</h2>
+        <h2 class="second-heading">Onze Games:</h2>
         <ul class="filters">
           </li>
         </ul>
@@ -49,11 +49,11 @@
         <div class="project">
           <section class="project-info">
             <h3 class="third-heading">Tower Defense</h3>
-            <p class="description">Attack or Defend towers in our Fantasy Game.</p>
+            <p class="description">Val torens aan of verdedig ze doormiddel van Power Ups in onze Fantasy world!.</p>
             <ul class="technologies">
               <li class="technology">Fantasy</li>
               <li class="technology">RPG</li>
-              <li class="technology">Strategy</li>
+              <li class="technology">Strategie</li>
             </ul>
           </section>
           <img src="" alt="Project"
@@ -62,9 +62,8 @@
 
         <div class="fade"></div>
       </section>
-    </section>
-    /* KEYFRAMES */
-    /*test*/
+    </section> 
+
     <ul class="links">
       <li class="link-item">
         <a href="#" class="link" target="_blank">
